Alterando o render.yaml_v04

--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 services:
   - type: web
     name: marnes-microservico-api
-    env: java
+    runtime: java
     plan: free
     region: oregon
     buildCommand: "./mvnw clean install -DskipTests"
